# SSU_BaseALT

./: README.md  calc.spec  pyproject.toml
calc/: calc.py
